# Iptables_Semantics

./: .gitignore  .gitmodules  .travis.yml  Attic.thy  Call_Return_Unfolding.thy  Datatype_Selectors.thy  Example_Semantics.thy  Firewall_Common.thy  Fixed_Action.thy  Iptables_Semantics.thy  LICENSE  Matching.thy  Matching_Embeddings.thy  Matching_Ternary.thy  Misc.thy  Negation_Type_DNF.thy  No_Spoof_Embeddings.thy  Optimizing.thy  Packet_Set.thy  Packet_Set_Impl.thy  README.md  ROOT  ROOTS  Ruleset_Update.thy  Semantics.thy  Semantics_Embeddings.thy  Semantics_Goto.thy  Semantics_OpenFlow.thy  Semantics_Stateful.thy  Semantics_Ternary.thy  Ternary.thy  Unknown_Match_Tacs.thy  check_theorems_doc.sh  travis-test
.travis/: install  test
Bitmagic/: Bitrange.thy  BitrangeLists.thy  CIDRSplit.thy  IPv4Addr.thy  NumberWang.thy  NumberWangCaesar.thy  NumberWangCebewee.thy  Numberwang_Ln.thy  ROOT  WordInterval.thy  WordInterval_Lists.thy  WordInterval_NumberWang.thy
Common/: Lib_toString.thy  Negation_Type.thy  Negation_Type_DNF.thy  Remdups_Rev.thy  SetPartitioning.thy  Ternary.thy
Examples/: Code_Interface.thy  Code_haskell.thy  Example_Semantics.thy  Firewall_toString.thy  Parser.thy
Examples/IPPartEval/: IP_Address_Space_Examples_All_Small.thy  TEST.thy  TUM_IPPart.thy
Examples/Parser_Test/: Parser_Test.thy  iptables-save  iptables_Ln  iptables_Lnv
Examples/Ringofsaturn_com/: Analyze_Ringofsaturn_com.oldresults  Analyze_Ringofsaturn_com.thy  iptables_Ln  iptables_Lnv
Examples/SQRL_Shorewall/: Analyze_SQRL_Shorewall.oldresults  Analyze_SQRL_Shorewall.thy  ITVal_results  SQRL_2015_nospoof.thy  akachan-iptables-Ln  akachan-iptables-Ln.ML  iptables-saveakachan  sqrl_upper  unfold_code.ML
Examples/Synology_Diskstation_DS414/: Analyze_Synology_Diskstation.thy  iptables_Ln_default  iptables_Ln_tuned  iptables_Ln_tuned_parsed.thy  iptables_Lnv_default  iptables_Lnv_tuned  uname_a
Examples/TUM_Net_Firewall/: Analyze_TUM_Net_Firewall.newresults  Analyze_TUM_Net_Firewall.oldnew.diff  Analyze_TUM_Net_Firewall.oldresults  Analyze_TUM_Net_Firewall.thy  Analyze_TUM_Net_Firewall_new.thy  README_cheating  TUM_IPPart.thy  TUM_Simple_FW.thy  TUM_Spoofing.thy  TUM_Spoofing_new.thy  TUM_Spoofing_new2.thy  TUM_Spoofing_new3.thy  iptables-Lnv-2015-05-13_10-53-20_cheating  iptables-Lnv-2015-05-13_10-53-20_cheating.ML  iptables-Lnv-2015-05-15_14-14-46_cheating  iptables-Lnv-2015-05-15_14-14-46_cheating.ML  iptables-Lnv-2015-05-15_15-23-41_cheating  iptables-Lnv-2015-05-15_15-23-41_cheating.ML  iptables-save-2015-05-13_10-53-20_cheating  iptables-save-2015-05-15_14-14-46_cheating  iptables-save-2015-05-15_15-23-41_cheating  iptables_Ln_29.11.2013_cheating.ML  iptables_Ln_29.11.2013_new_deletemeaftertesting.ML  iptables_Lnv_test_iface  lower_closure_from_isabelle  unfold_code.ML  upper_closure_from_isabelle  upper_iptables-save_format
Examples/sns.ias.edu/: SNS_IAS_Eduroam_Spoofing.thy  iptables_Lnv  test.sh  (+5 more)
OpenFlow/: List_Group.thy  OpenFlowMatches.thy  Semantics_OpenFlow.thy  Sort_Descending.thy
Output_Format/: Format_Ln.thy  IPPortSpace_Operations.thy  IPSpace_Format_Ln.thy  IPSpace_Operations.thy  Negation_Type.thy  Negation_Type_Matching.thy
Primitive_Matchers/: Code_Interface.thy  Common_Primitive_Lemmas.thy  Common_Primitive_Matcher.thy  Common_Primitive_Syntax.thy  Common_Primitive_toString.thy  Conntrack_State.thy  Conntrack_State_Transform.thy  Format_Ln.thy  IPPortIfaceSpace_Matcher.thy  IPPortIfaceSpace_Syntax.thy  IPPortSpace_Matcher.thy  IPPortSpace_Syntax.thy  IPSpace_Format_Ln.thy  IPSpace_Matcher.thy  IPSpace_Syntax.thy  IPSpace_operations.thy  Iface.thy  Iface_Attic.thy  Iface_Negation.thy  Interface_Replace.thy  IpAddresses.thy  IpAddresses_Normalize.thy  Ipassmt.thy  Negation_Type.thy  Negation_Type_Matching.thy  No_Spoof.thy  Parser.thy  Ports.thy  Ports_Normalize.thy  Primitive_Abstract.thy  Primitive_Normalization.thy  Protocol.thy  Simple_Packet.thy  Transform.thy
Routing/: AnnotateRouting.thy  CaesarTheories.thy  PrefixMatch.thy  RoutingRange.thy
Semantics_Ternary/: Fixed_Action.thy  Matching_Ternary.thy  Negation_Type_DNF.thy  Negation_Type_Matching.thy  Normalized_Matches.thy  Optimizing.thy  Packet_Set.thy  Packet_Set_Impl.thy  Primitive_Normalization.thy  Semantics_Ternary.thy  Ternary.thy  Unknown_Match_Tacs.thy
Simple_Firewall/: IPPartitioning.thy  Shadowed.thy  SimpleFwSyntax.thy  SimpleFw_Compliance.thy  SimpleFw_Semantics.thy  SimpleFw_toString.thy
afp/: Mergesort.thy
beta_haskell_tool/: Main.hs  ipassmt  ipassmt_tumi8  iptables.cabal
beta_haskell_tool/Network/IPTables/: Generated.hs  IpassmtParser.hs  IsabelleToString.hs  Parser.hs  ParserHelper.hs  Ruleset.hs
haskell_tool/: .bintray_deploy  Main.hs  ParserTestSuite.hs  README.md  apparmor_home.diekmann.Downloads.fffuu  contrived_network_firewall_example  fffuu.cabal  ipassmt_sqrl  ipassmt_sqrl_new  iptables.cabal  stack.yaml
haskell_tool/Network/IPTables/: Generated.hs  Ruleset.hs
haskell_tool/lib/: Data_Bits.README  Data_Bits.hs
haskell_tool/lib/Common/: Util.hs
haskell_tool/lib/Network/IPTables/: Analysis.hs  Generated.hs  Ipassmt.hs  IpassmtParser.hs  IsabelleToString.hs  Main.hs  Parser.hs  ParserHelper.hs  Ruleset.hs
haskell_tool/lib/Network/RTbl/: Parser.hs
haskell_tool/src/: Main.hs  Main6.hs
haskell_tool/test/: Main.hs  ParserTestSuite.hs
haskell_tool/test/Suites/: FffuuBinary.hs  Parser.hs  ParserHelper.hs
haskell_tool/test/Suites/GoldenFiles/: help  i8_iptables-save-2015-05-15_15-23-41_cheating  parser_test  sqrl_2015_aug_iptables-save-spoofing-protection  synology_iptables-save_jun_2015_cleanup
images/: fffuu.xcf
importer/: hacky_ipassmt_parser.py  main.py  test.py
legacy_importer/: hacky_ipassmt_parser.py  test.py
thy/: Call_Return_Unfolding.thy  Datatype_Selectors.thy  Documentation.thy  Firewall_Common.thy  Firewall_Common_Decision_State.thy  Iptables_Semantics.thy  Matching.thy  Matching_Embeddings.thy  No_Spoof_Embeddings.thy  ROOT  ROOTS  Ruleset_Update.thy  Semantics.thy  Semantics_Embeddings.thy  Semantics_Goto.thy  Semantics_Stateful.thy
(+1076 files in other folders)
