name:                iptables
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Cornelius Diekmann
maintainer:          diekmann@net.in.tum.de
copyright:           BSD2
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable iptables
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
      Network.IPTables.Generated
    , Network.IPTables.IpassmtParser
    , Network.IPTables.IsabelleToString
    , Network.IPTables.ParserHelper
    , Network.IPTables.Parser
    , Network.IPTables.Ruleset
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , parsec >=3.0 && <3.2
