name:                fffuu
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Cornelius Diekmann
maintainer:          diekmann@net.in.tum.de
copyright:           BSD2
category:            Network
build-type:          Simple
homepage:            http://iptables.isabelle.systems/
bug-reports:         https://github.com/diekmann/Iptables_Semantics/issues
cabal-version:       >= 1.22
tested-with:         GHC >= 7.8 && < 8.0

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -O3
  exposed-modules:
      Network.IPTables.Generated
    , Network.IPTables.IpassmtParser
    , Network.IPTables.IsabelleToString
    , Network.IPTables.ParserHelper
    , Network.IPTables.Parser
    , Network.IPTables.Ruleset
    , Network.IPTables.Analysis
    , Common.Util
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , parsec >=3.0 && <3.2

executable fffuu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O3
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , fffuu
    , hsseccomp == 0.2.0.1
    , parsec >=3.0 && <3.2
    , optparse-generic >= 1.1 && < 1.2

test-suite test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -O3 -W
  other-modules:
      Suites.Parser
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , fffuu
    , tasty >=0.11 && <0.12
    , tasty-hunit >=0.9 && <0.10
    , tasty-golden >=2.3.1 && <2.3.2
    , bytestring >=0.10.6.0 && <0.10.7
    , process >=1.2.3 && < 1.2.4
