name:                fffuu
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Cornelius Diekmann
maintainer:          diekmann@net.in.tum.de
copyright:           BSD2
category:            Network
build-type:          Simple
homepage:            http://iptables.isabelle.systems/
bug-reports:         https://github.com/diekmann/Iptables_Semantics/issues
cabal-version:       >= 1.22
-- ghc8 needs cabal >= 1.24 or some dependency fails to install
tested-with:         GHC >= 7.8 && < 8.1

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:
      Network.IPTables.Generated
    , Data_Bits
    , Network.IPTables.Ipassmt
    , Network.IPTables.IpassmtParser
    , Network.IPTables.IsabelleToString
    , Network.IPTables.ParserHelper
    , Network.IPTables.Parser
    , Network.IPTables.Ruleset
    , Network.IPTables.Analysis
    , Network.IPTables.Main
    , Common.Util
  build-depends:
      base >=4.7 && <5
    , containers >=0.5 && <0.6
    , split >= 0.2.3 && <= 0.2.4
    , parsec >=3.0 && <3.2
    , optparse-generic >= 1.1 && < 1.2

executable fffuu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -W
  build-depends:
      base >=4.7 && <5
    , fffuu

executable fffuu6
  hs-source-dirs:      src
  main-is:             Main6.hs
  default-language:    Haskell2010
  ghc-options:         -W
  build-depends:
      base >=4.7 && <5
    , fffuu

test-suite test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -W
  other-modules:
      Suites.FffuuBinary
    , Suites.Parser
    , Suites.ParserHelper
  build-depends:
      base >=4.7 && <5
    , directory >=1.0 && <1.3
    , containers >=0.5 && <0.6
    , split >= 0.2.3 && <= 0.2.4
    , parsec >=3.0 && <3.2
    , fffuu
    , tasty >=0.11 && <0.12
    , tasty-hunit >=0.9 && <0.10
    , tasty-golden >=2.3.1 && <2.3.2
    , bytestring >=0.10.6.0 && <0.10.9
    , process >=1.2.3 && < 1.5
