name:                iptables
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Cornelius Diekmann
maintainer:          diekmann@net.in.tum.de
copyright:           BSD2
category:            Network
build-type:          Simple
homepage:            http://iptables.isabelle.systems/
bug-reports:         https://github.com/diekmann/Iptables_Semantics/issues
cabal-version:       >= 1.18
tested-with:         GHC >= 7.8 && < 8.0

executable iptables
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O3
  other-modules:
      Network.IPTables.Generated
    , Network.IPTables.IpassmtParser
    , Network.IPTables.IsabelleToString
    , Network.IPTables.ParserHelper
    , Network.IPTables.Parser
    , Network.IPTables.Ruleset
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , parsec >=3.0 && <3.2
